--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,7 @@ jobs:
       
       - name: Create GH Pages Branch
         run: |
+          mkdir ${{ runner.temp}}/site/
           cp -r site/* ${{ runner.temp }}/site/
           git checkout --orphan gh-pages
           git rm . -r -f
