--- a/.github/workflows/nightly_snapshot.yml
+++ b/.github/workflows/nightly_snapshot.yml
@@ -2,56 +2,24 @@
 name: Build Chunky
 
 on:
-  workflow_call:
-    inputs:
-      ref:
-        required: false
-        type: string
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-20.04
-
     steps:
-      - name: Clone Chunky Repository
-        uses: actions/checkout@v2
+      - uses: ./.github/workflows/build.yml@master
         with:
-          repository: chunky-dev/chunky
-          ref: ${{ inputs.ref }}
-          fetch-depth: 0
-      
-      - name: Setup JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-          java-package: jdk+fx
-      
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      
-      - name: Build Chunky
-        run: ./gradlew -PnewVersion="$(git describe)"
-      
-      - name: Include release files and cleanup.
-        run: |
-          cp latest.json build/latest.json
-          cp -r chunky/lib/* build/
-          rm -rf build/tmp/
-      
-      - name: Archive Artifacts
-        uses: actions/upload-artifact@v2.2.2
-        with:
-          name: Chunky Build
-          path: build/
+          ref: master
 
   deploy:
     runs-on: ubuntu-20.04
     needs: build
-    
+
     steps:
       - name: Clone Update Site Repository
         uses: actions/checkout@v2
-      
+
       - name: Create GH Pages Branch
         run: |
           mkdir ${{ runner.temp}}/site/
@@ -59,18 +27,18 @@ jobs:
           git checkout --orphan gh-pages
           git rm . -r -f
           cp -r ${{ runner.temp }}/site/* ./
-      
+
       - name: Get Artifacts
         uses: actions/download-artifact@v2
         with:
           name: Chunky Build
           path: ./lib/
-      
+
       - name: Organize Files
         run: |
           mv ./lib/latest.json ./latest.json
           mv ./lib/ChunkyLauncher.jar ./ChunkyLauncher.jar
-      
+
       - name: Commit GH Pages Branch
         run: |
           git config user.name github-actions
@@ -78,5 +46,5 @@ jobs:
           git add .
           git commit -m "Actions Build"
           git push --force --set-upstream origin gh-pages
-          
-      
+
+
