Fix repository syntax part 2.

--- a/.github/workflows/nightly_snapshot.yml
+++ b/.github/workflows/nightly_snapshot.yml
@@ -7,7 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-      - uses: ${{ env.GITHUB_REPOSITORY }}/.github/workflows/build.yml@master
+      - uses: actions/checkout@v2
+      - uses: ./.github/workflows/build.yml@master
         with:
           ref: master
 
