--- a/.github/workflows/nightly_snapshot.yml
+++ b/.github/workflows/nightly_snapshot.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    uses: ./.github/workflows/build.yml@master
+    uses: ThatRedox/ChunkyUpdateSite/.github/workflows/build.yml@master
     with:
       ref: master
 
