--- a/.github/workflows/deploy_pages.yaml
+++ b/.github/workflows/deploy_pages.yaml
@@ -41,6 +41,7 @@ jobs:
           cp -r ./snapshot/lib/ ./gh-pages/
 
       - name: Commit gh-pages branch
+        working-directory: gh-pages
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
