--- a/.github/workflows/deploy_branch.yaml
+++ b/.github/workflows/deploy_branch.yaml
@@ -1,26 +1,23 @@
-name: Nightly Snapshot
+name: Deploy Branch
 
 on:
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      branch_name:
+        required: true
+        type: string
 
 jobs:
-  build_snapshot:
-    uses: ThatRedox/ChunkyUpdateSite/.github/workflows/build.yaml@master
-    with:
-      ref: master
-      ver: "2.5.0-SNAPSHOT-$(git rev-parse --short=7 HEAD)"
-
-  deploy_snapshot:
+  deploy:
     runs-on: ubuntu-20.04
-    needs: build_snapshot
 
     steps:
       - name: Clone update site repository
         uses: actions/checkout@v2
 
-      - name: Create snapshot branch
+      - name: Create branch
         run: |
-          git checkout --orphan snapshot
+          git checkout --orphan ${{ inputs.branch_name }}
           git rm . -r -f
 
       - name: Get artifacts
@@ -32,7 +29,7 @@ jobs:
       - name: Deploy snapshot files
         run: |
           mkdir ./lib/
-          cp ${{ runner.temp }}/lib/latest.json ./snapshot.json
+          cp ${{ runner.temp }}/lib/latest.json ./latest.json
           cp ${{ runner.temp }}/lib/chunky-core-*.jar ./lib/
           cp ${{ runner.temp }}/lib/lib/* ./lib/
 
@@ -42,8 +39,4 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Actions Build"
-          git push --force --set-upstream origin snapshot
-
-  deploy_page:
-    needs: deploy_snapshot
-    uses: ThatRedox/ChunkyUpdateSite/.github/workflows/deploy_pages.yaml@master
+          git push --force --set-upstream origin ${{ inputs.branch_name }}
