--- a/.github/workflows/beta_build.yaml
+++ b/.github/workflows/beta_build.yaml
@@ -21,7 +21,7 @@ jobs:
 
   deploy_beta:
     needs: build_beta
-    uses: ThatRedox/ChunkyUpdateSite/.github/workflows.deploy_branch.yaml@master
+    uses: ThatRedox/ChunkyUpdateSite/.github/workflows/deploy_branch.yaml@master
     with:
       branch_name: release-beta
 
