--- a/.github/workflows/build_stable.yaml
+++ b/.github/workflows/build_stable.yaml
@@ -11,6 +11,10 @@ on:
         required: true
         type: string
         description: Version name. SemVer compliant version.
+      notes:
+        required: true
+        type: string
+        description: Comment ID for release notes.
 
 jobs:
   build_stable:
@@ -18,6 +22,7 @@ jobs:
     with:
       ref: ${{ github.event.inputs.ref }}
       ver: ${{ github.event.inputs.ver }}
+      notes: ${{ github.event.inputs.notes }}
 
   deploy_stable:
     needs: build_stable
