--- a/.github/workflows/chunky_build.yaml
+++ b/.github/workflows/chunky_build.yaml
@@ -9,6 +9,9 @@ on:
       ver:
         required: true
         type: string
+      notes:
+        required: true
+        type: string
 
 jobs:
   build:
@@ -30,9 +33,28 @@ jobs:
       
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      - name: Calculate release name
+        id: release_name
+        run: echo "::set-output name=result::${{ inputs.ver }}"
+
+      - name: Get release notes
+        uses: actions/github-script@v5
+        id: release_notes
+        with:
+          result-encoding: string
+          script: |
+            return github.rest.issues.getComment({
+              "ThatRedox",
+              "ChunkyUpdateSite",
+              ${{ notes }}
+            }).body;
+
+      - name: Save release notes
+        run: echo "${{ steps.release_notes.outputs.result }}" > "release_notes-${{ steps.release_name.outputs.result }}.txt"
       
       - name: Build Chunky
-        run: ./gradlew -PnewVersion=${{ inputs.ver }}
+        run: ./gradlew -PnewVersion=${{ steps.release_name.outputs.result }}
       
       - name: Include release files and cleanup.
         run: |
