Fix syntax part 2.

--- a/.github/workflows/chunky_build.yaml
+++ b/.github/workflows/chunky_build.yaml
@@ -47,7 +47,7 @@ jobs:
             return github.rest.issues.getComment({
               "ThatRedox",
               "ChunkyUpdateSite",
-              ${{ notes }}
+              ${{ inputs.notes }}
             }).body;
 
       - name: Save release notes
