--- a/.github/workflows/build_beta.yaml
+++ b/.github/workflows/build_beta.yaml
@@ -12,7 +12,7 @@ on:
         type: string
         description: Version name. `Major.Minor.Patch`
       notes:
-        required: false
+        required: true
         default: "986181675"
         type: string
         description: Comment ID for release notes.
